# otus_homework_01

./: .travis.yml  CMakeLists.txt  main.cpp  project_info.cpp  project_info.hpp.in  test_project_info.cpp
